a bit more structure

--- a/index.html
+++ b/index.html
@@ -459,6 +459,9 @@
             </svg>                            
         </div>                                                              
     </div>
+    <div id="wpmInfo">
+        <p></p>
+    </div>
     <script src="script.js"></script>
 </body>
 </html>
