no longer uses random word api, now fetches from json database locally

--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
             </defs>
         </svg>
         <div id="keyboardSvgPlaceholder">
-            <svg width="762" height="252" viewBox="0 0 762 252" fill="none" xmlns="http://www.w3.org/2000/svg">
+            <svg width="762" height="252" viewBox="0 0 762 252" fill="none" xmlns="http://www.w3.org/2000/svg" id="keyboardSvg">
                 <g id="keyboard">
                 <g id="Group">
                 <path id="Vector" d="M737.763 251H24.2374C11.4035 251 1 242.691 1 232.441V19.559C1 9.30895 11.4035 1 24.2374 1H737.763C750.596 1 761 9.30895 761 19.559V232.441C761 242.691 750.596 251 737.763 251Z" fill="#111111"/>
