added to the database

--- a/index.html
+++ b/index.html
@@ -8,6 +8,31 @@
     <title>Document</title>
 </head>
 <body>
+    <div id="selectionDiv">
+        <h1>Select a category</h1>
+        <ul>
+            <li>
+                <img src="icons/foodSvg.svg">
+                food
+            </li>
+            <li>
+                <img src="icons/cowSvg.svg">
+                animals
+            </li>
+            <li>
+                <img src="icons/bookSvg.svg">
+                lexical
+            </li>
+            <li>
+                <img src="icons/dictionarySvg.svg">
+                general
+            </li>
+            <li>
+                <img src="icons/randomSvg.svg">
+                random
+            </li>
+        </ul>
+    </div>
     <div id="placeholder">
         <h2 id="timeHeader">01:00</h2>
         <!-- needs to display the current wpm -->
@@ -464,17 +489,6 @@
                 </g>
                 </svg>                               
         </div>
-        <!-- <div id="wordSelection">
-            <ul>
-                <li>Fruits</li>
-                <li>Food</li>
-                <li>Animals</li>
-                <li>Lexical</li>
-                <li>Nature</li>
-                <li>Other</li>
-
-            </ul>
-        </div>                                                            -->
     </div>
     <div id="wpmInfo">
         <p></p>
