--- a/index.html
+++ b/index.html
@@ -8,34 +8,29 @@
     <title>Document</title>
 </head>
 <body>
-    <div id="selectionDiv">
-        <h1>Select a category</h1>
-        <ul>
-            <li>
+    <div id="categoryContainer">
+        <h1 id="categoryHeader">Select a category</h1>
+        <div id="categoryElementContainer">
+            <div class="categoryElement">
                 <img src="icons/foodSvg.svg">
-                food
-            </li>
-            <li>
+                <p class="categoryParag">food</p>
+            </div>
+            <div class="categoryElement">
                 <img src="icons/cowSvg.svg">
-                animals
-            </li>
-            <li>
-                <img src="icons/bookSvg.svg">
-                lexical
-            </li>
-            <li>
+                <p class="categoryParag">animals</p>
+            </div>
+            <div class="categoryElement">
                 <img src="icons/dictionarySvg.svg">
-                general
-            </li>
-            <li>
+                <p class="categoryParag">common</p>
+            </div>
+            <div class="categoryElement">
                 <img src="icons/randomSvg.svg">
-                random
-            </li>
-        </ul>
+                <p class="categoryParag">random</p>
+            </div>
+        </div>
     </div>
     <div id="placeholder">
         <h2 id="timeHeader">01:00</h2>
-        <!-- needs to display the current wpm -->
         <p id="parag"></p>
         <svg width="1080" height="800" viewBox="0 0 1080 800" fill="none" xmlns="http://www.w3.org/2000/svg" id="errorSvg">
             <g id="1902958_217736-P0QXG2-791-02 1" clip-path="url(#clip0_3_2)">
